--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="logo.png" type="image/png">
     <title>VernusAI</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -198,7 +199,7 @@
                     <h6 class="text-uppercase">Quick Links</h6>
                     <ul class="list-unstyled">
                         <li><a href="#about" class="text-light text-decoration-none">About</a></li>
-                        <li><a href="#features" class="text-light text-decoration-none">Features</a></li>
+                        <li><a href="#our-agents" class="text-light text-decoration-none">AI Agents</a></li>
                         <li><a href="#contact" class="text-light text-decoration-none">Contact</a></li>
                     </ul>
                 </div>
