--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="logo.png" type="image/png">
+    <link rel="icon" href="assets/logo.png" type="image/png">
     <title>VernusAI</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -42,7 +42,7 @@
     <header class="hero-section">
         <div class="overlay"></div>
         <video class="background-video" autoplay muted loop>
-            <source src="video.mp4" type="video/mp4">
+            <source src="assets/video.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         <div
@@ -71,7 +71,7 @@
                 <div class="col-md-4">
                     <div class="card h-100 border-0 shadow-lg bg-dark text-light">
                         <div class="card-img-top-wrapper text-center py-4">
-                            <img src="codex.gif" class="animated-icon" alt="Codex">
+                            <img src="assets/codex.gif" class="animated-icon" alt="Codex">
                         </div>
                         <div class="card-body text-center">
                             <h5 class="card-title">Codex</h5>
@@ -83,7 +83,7 @@
                 <div class="col-md-4">
                     <div class="card h-100 border-0 shadow-lg bg-dark text-light">
                         <div class="card-img-top-wrapper text-center py-4">
-                            <img src="sketchy.gif" class="animated-icon" alt="Sketchy">
+                            <img src="assets/sketchy.gif" class="animated-icon" alt="Sketchy">
                         </div>
                         <div class="card-body text-center">
                             <h5 class="card-title">Sketchy</h5>
@@ -95,7 +95,7 @@
                 <div class="col-md-4">
                     <div class="card h-100 border-0 shadow-lg bg-dark text-light">
                         <div class="card-img-top-wrapper text-center py-4">
-                            <img src="doc.gif" class="animated-icon" alt="Doc">
+                            <img src="assets/doc.gif" class="animated-icon" alt="Doc">
                         </div>
                         <div class="card-body text-center">
                             <h5 class="card-title">Doc</h5>
@@ -107,7 +107,7 @@
                 <div class="col-md-4">
                     <div class="card h-100 border-0 shadow-lg bg-dark text-light">
                         <div class="card-img-top-wrapper text-center py-4">
-                            <img src="oracle.gif" class="animated-icon" alt="Oracle">
+                            <img src="assets/oracle.gif" class="animated-icon" alt="Oracle">
                         </div>
                         <div class="card-body text-center">
                             <h5 class="card-title">Oracle</h5>
@@ -119,7 +119,7 @@
                 <div class="col-md-4">
                     <div class="card h-100 border-0 shadow-lg bg-dark text-light">
                         <div class="card-img-top-wrapper text-center py-4">
-                            <img src="blockster.gif" class="animated-icon" alt="Blockster">
+                            <img src="assets/blockster.gif" class="animated-icon" alt="Blockster">
                         </div>
                         <div class="card-body text-center">
                             <h5 class="card-title">Blockster</h5>
@@ -129,23 +129,26 @@
                 </div>
                 <!-- Chatty Card -->
                 <div class="col-md-4">
-                    <div class="card h-100 border-0 shadow-lg bg-dark text-light">
-                        <div class="card-img-top-wrapper text-center py-4">
-                            <img src="chatty.gif" class="animated-icon" alt="Chatty">
+                    <a href="chatty.html" style="text-decoration: none;">
+                        <div class="card h-100 border-0 shadow-lg bg-dark text-light">
+                            <div class="card-img-top-wrapper text-center py-4">
+                                <img src="assets/chatty.gif" class="animated-icon" alt="Chatty">
+                            </div>
+                            <div class="card-body text-center">
+                                <h5 class="card-title">Chatty</h5>
+                                <p class="card-text">Your 24/7 Virtual Assistant</p>
+                            </div>
                         </div>
-                        <div class="card-body text-center">
-                            <h5 class="card-title">Chatty</h5>
-                            <p class="card-text">Your 24/7 Virtual Assistant</p>
-                        </div>
-                    </div>
+                    </a>
                 </div>
+
             </div>
             <!-- Trackster Card (Centered and Spaced) -->
             <div class="row justify-content-center mt-4">
                 <div class="col-md-4">
                     <div class="card h-100 border-0 shadow-lg bg-dark text-light">
                         <div class="card-img-top-wrapper text-center py-4">
-                            <img src="trackster.gif" class="animated-icon" alt="Trackster">
+                            <img src="assets/trackster.gif" class="animated-icon" alt="Trackster">
                         </div>
                         <div class="card-body text-center">
                             <h5 class="card-title">Trackster</h5>
